# ca821x-api

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  makefile
docs/: cascoda_api.txt
include/: ca821x_api.h  cascoda_api.h  cascoda_debug.h  cascoda_evbme.h  hwme_tdme.h  ieee_802_15_4.h  kernel_exchange.h  mac_messages.h
source/: ca821x_api.c  cascoda_api.c  cascoda_debug.c  cascoda_evbme.c  kernel_exchange.c
test/: makefile  test.c
test15_4/include/: test15_4_phy_tests.h
test15_4/source/: test15_4_phy_tests.c  test15_4_phy_tests_mac.c
